--- a/app/src/main/res/layout/fragment_applicant_applied.xml
+++ b/app/src/main/res/layout/fragment_applicant_applied.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".employer.ApplicantAppliedFragment">
 
+    <include
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:id="@+id/ln_delayloadinglayout"
+        layout="@layout/delayloadinglayout"
+        />
+
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
 
