--- a/app/src/main/res/layout/activity_view_recommended_applicant_profile.xml
+++ b/app/src/main/res/layout/activity_view_recommended_applicant_profile.xml
@@ -12,18 +12,27 @@
     >
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:layout_width="match_parent"
-    android:id="@+id/bruh"
     android:layout_height="match_parent"
     android:background="#F0F0FF"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".employer.ViewRecommendedApplicantProfileActivity">
 
+    <include
+        android:layout_width="fill_parent"
+        android:layout_height="1300px"
+        android:layout_gravity="center"
+        android:id="@+id/ln_delayloadinglayout"
+        layout="@layout/delayloadinglayout"
+        />
+
+
+
+
     <LinearLayout
+        android:id="@+id/bruh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -96,12 +105,14 @@
 
 
     <LinearLayout
+        android:id="@+id/bruh2"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#FFFFFF"
         android:gravity="center_horizontal">
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -122,6 +133,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bruh3"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -149,6 +161,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bruh4"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="250px"
@@ -186,20 +199,6 @@
 
 
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:id="@+id/ln_loader"
-        android:layout_gravity="center">
-
-        <ProgressBar
-            android:id="@+id/applicantsavedjob_loader"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:visibility="visible"/>
-    </RelativeLayout>
     <RelativeLayout
         android:padding="15dp"
         android:layout_marginTop="10dp"
@@ -225,7 +224,11 @@
 
 </LinearLayout>
 
+
 </com.amar.library.ui.StickyScrollView>
+
+
+
 
 
 
