--- a/app/src/main/res/layout/fragment_employer_home.xml
+++ b/app/src/main/res/layout/fragment_employer_home.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,13 +8,22 @@
     android:gravity="center_horizontal"
     tools:context=".employer.EmployerHomeFragment">
 
+     <include
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:id="@+id/ln_delayloadinglayout"
+        layout="@layout/delayloadinglayout"
+        />
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1400px"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
-
+        android:gravity="center_horizontal"
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,6 +79,7 @@
                 />
         </LinearLayout>
 
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -78,6 +89,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="top"
                 android:orientation="vertical"
+                android:id="@+id/bruh"
                 >
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -91,5 +103,6 @@
 
 
     </LinearLayout>
+
 
 </LinearLayout>
