--- a/app/src/main/res/layout/fragment_guest_search.xml
+++ b/app/src/main/res/layout/fragment_guest_search.xml
@@ -5,12 +5,23 @@
     android:layout_height="match_parent"
     tools:context=".guest.GuestSearchFragment">
 
+    <include
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/ln_delayloadinglayout"
+        layout="@layout/delayloadinglayout"
+        />
+
+
+
     <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/bruh">
+
 
 
         <RelativeLayout
@@ -90,5 +101,6 @@
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </LinearLayout>
+
 
 </FrameLayout>
