--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,16 @@
     android:gravity="center_horizontal"
     tools:context=".applicant.ProfileFragment">
 
+    <include
+        android:layout_width="fill_parent"
+        android:layout_height="1300px"
+        android:layout_gravity="center"
+        android:id="@+id/ln_delayloadinglayout"
+        layout="@layout/delayloadinglayout"
+        />
+
 <LinearLayout
+    android:id="@+id/bruh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -95,6 +104,7 @@
 </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bruh2"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -171,6 +181,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bruh3"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -249,6 +260,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bruh4"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="400px"
