delay loading module in applicant side is complete

--- a/app/src/main/res/layout/activity_applicant_final_check_profile.xml
+++ b/app/src/main/res/layout/activity_applicant_final_check_profile.xml
@@ -20,8 +20,17 @@
     android:gravity="center_horizontal"
     tools:context=".applicant.ApplicantFinalCheckProfileActivity">
 
+    <include
+        android:layout_width="fill_parent"
+        android:layout_height="1300px"
+        android:layout_gravity="center"
+        android:id="@+id/ln_delayloadinglayout"
+        layout="@layout/delayloadinglayout"
+        />
+
 
     <LinearLayout
+        android:id="@+id/bruh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -102,6 +111,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bruh2"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -139,6 +149,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bruh3"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -176,6 +187,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bruh4"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="400px"
