symbol in bottom navigation guest, applicant and employer side is complete

--- a/app/src/main/res/menu/bottom_nav_menu_employer.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_employer.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:icon="@drawable/ic_baseline_home_24"
         android:id="@+id/navigation_employerhome"
         android:title="Home" />
 
     <item
+        android:icon="@drawable/ic_baseline_search_24"
         android:id="@+id/navigation_employerjob"
         android:title="Job" />
 
     <item
+        android:icon="@drawable/ic_baseline_person_search_24"
         android:id="@+id/navigation_employerapplicants"
         android:title="Applicants" />
 
     <item
+        android:icon="@drawable/ic_baseline_person_24"
         android:id="@+id/navigation_employerprofile"
         android:title="Profile" />
 
