--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,14 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:icon="@drawable/ic_baseline_home_24"
         android:id="@+id/navigation_home"
         android:title="Home" />
 
     <item
+        android:icon="@drawable/ic_baseline_search_24"
         android:id="@+id/navigation_dashboard"
         android:title="Search" />
 
     <item
+        android:icon="@drawable/ic_baseline_person_24"
         android:id="@+id/navigation_notifications"
         android:title="Profile" />
 
