--- a/app/src/main/res/layout/activity_edit_contact_number.xml
+++ b/app/src/main/res/layout/activity_edit_contact_number.xml
@@ -10,27 +10,57 @@
     tools:context=".EditContactNumberActivity">
 
     <LinearLayout
-        android:layout_marginTop="-100dp"
+        android:layout_marginTop="-150dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical"
-        >
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-        <EditText
-            android:background="#FFFFFF"
-            android:padding="10dp"
-            android:id="@+id/edittext_editcontactnumber"
+    <TextView
+        android:layout_marginTop="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter Contact Number"
+        android:textColor="@color/black"
+        android:textSize="25dp"
+        android:letterSpacing="0.03"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Contact Number"
-            android:textSize="18dp"/>
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal"
+            android:layout_margin="20dp"
+            android:gravity="center">
+
+            <EditText
+                android:background="#FFFFFF"
+                android:padding="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:hint="+63"
+                android:textSize="18dp"/>
+
+            <EditText
+                android:layout_marginStart="5dp"
+                android:maxLength="10"
+                android:background="#FFFFFF"
+                android:padding="10dp"
+                android:inputType="number"
+                android:id="@+id/edittext_editcontactnumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Contact Number"
+                android:textSize="18dp"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
     <Button
         android:id="@+id/btnsendOTP"
-        android:layout_marginTop="20dp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/shapebutton"
