zoomable BIR certificate image in employer side is complete

--- a/app/src/main/res/layout/fragment_employer_profile.xml
+++ b/app/src/main/res/layout/fragment_employer_profile.xml
@@ -209,7 +209,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"/>
 
-        <ImageView
+        <com.ortiz.touchview.TouchImageView
             android:id="@+id/img_profile_BIR"
             android:layout_marginTop="15dp"
             android:layout_width="350dp"
