--- a/app/src/main/res/layout/activity_applicant_final_check_profile.xml
+++ b/app/src/main/res/layout/activity_applicant_final_check_profile.xml
@@ -52,7 +52,7 @@
             android:layout_marginTop="-40dp"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@color/design_default_color_primary_dark"
+            android:src="@drawable/img"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:id="@+id/imguserprofile"
@@ -140,6 +140,14 @@
             android:gravity="right"
             android:layout_marginLeft="150dp"/>
 
+        <include
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ln_noworkexperiencelayout"
+            layout="@layout/noworkexperiencelayout"
+            android:visibility="gone"
+            />
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginTop="10dp"
             android:id="@+id/recyclerview_workexperience"
@@ -178,6 +186,14 @@
             android:gravity="right"
             android:layout_marginLeft="150dp"/>
 
+        <include
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ln_noeducationlayout"
+            layout="@layout/noeducationlayout"
+            android:visibility="gone"
+            />
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginTop="10dp"
             android:id="@+id/recyclerview_educationalbackground"
@@ -190,10 +206,10 @@
         android:id="@+id/bruh4"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="400px"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#FFFFFF"
-        android:layout_marginBottom="30px"
+        android:layout_marginBottom="10px"
         android:gravity="center_horizontal">
 
         <TextView
@@ -204,6 +220,15 @@
             android:text="Resume"
             android:layout_marginBottom="8dp"
             android:gravity="center_horizontal"/>
+
+        <include
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ln_noresumelayout"
+            layout="@layout/noresumelayout"
+            android:layout_marginBottom="8dp"
+
+            />
 
         <TextView
             android:id="@+id/textView_ResumeView"
@@ -230,7 +255,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:text="Upload Document"
             android:gravity="center_horizontal"/>
 
