--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,6 +29,14 @@
         android:textStyle="bold"
         android:textSize="25sp"/>
 
+        <include
+            android:layout_marginTop="40dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ln_norecommendedjoblayout"
+            layout="@layout/norecommendedjoblayout"
+            android:visibility="gone"/>
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -89,35 +97,35 @@
             />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/allerrorlayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="40dp"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:visibility="visible"
-        >
+<!--    <LinearLayout-->
+<!--        android:id="@+id/allerrorlayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:orientation="vertical"-->
+<!--        android:visibility="visible"-->
+<!--        >-->
 
-        <ImageView
-            android:layout_marginTop="50dp"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:src="@drawable/logo" />
+<!--        <ImageView-->
+<!--            android:layout_marginTop="50dp"-->
+<!--            android:layout_width="300dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:adjustViewBounds="true"-->
+<!--            android:src="@drawable/logo" />-->
 
 
-        <TextView
-            android:id="@+id/allerrortext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="dummyText"
-            android:textAlignment="center"
-            android:textColor="@color/design_default_color_primary"
-            android:textSize="24sp" />
-    </LinearLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/allerrortext"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:hint="dummyText"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="@color/design_default_color_primary"-->
+<!--            android:textSize="24sp" />-->
+<!--    </LinearLayout>-->
 
 <!--    <RelativeLayout-->
 <!--        android:layout_width="wrap_content"-->
