Validation in applicant side is complete

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -69,6 +69,8 @@
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:hint="Specialization"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         />
     <TextView
         android:id="@+id/applicantprofile_contactno"
@@ -111,6 +113,8 @@
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:hint="Gender"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         />
 
     <Button
