--- a/app/src/main/res/layout/activity_add_education.xml
+++ b/app/src/main/res/layout/activity_add_education.xml
@@ -58,6 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Year of Graduation"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:textSize="18dp"/>
 
     </LinearLayout>
