--- a/app/src/main/res/layout/activity_add_work_experience.xml
+++ b/app/src/main/res/layout/activity_add_work_experience.xml
@@ -74,6 +74,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Specialization"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:textSize="18dp"/>
 
     </LinearLayout>
@@ -91,6 +93,8 @@
             android:id="@+id/edittext_workstartdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:hint="Start Date"
             android:textSize="18dp"/>
 
@@ -110,6 +114,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="End Date"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:textSize="18dp"/>
 
     </LinearLayout>
