--- a/app/src/main/res/menu/navigation_drawer_menu_employer.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu_employer.xml
@@ -3,12 +3,14 @@
     <item
         android:id="@+id/navigation_home_employer"
         android:title="Home"/>
-<item
-    android:id="@+id/navigation_logout"
-    android:title="Logout"/>
-
+    <item
+        android:id="@+id/navigation_applicanthired"
+        android:title="Applicant Hired List"/>
     <item
         android:id="@+id/navigation_requestmaintenance"
         android:title="Request Maintenance"/>
 <!--    android:icon="@drawable/ic_baseline_person_24"/>-->
+    <item
+        android:id="@+id/navigation_logout"
+        android:title="Logout"/>
 </menu>
