Application History in applicant side is complete

--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -4,9 +4,13 @@
     <item
         android:id="@+id/navigation_home"
         android:title="Home"/>
-<item
+    <item
     android:id="@+id/navigation_testemail"
     android:title="Email"/>
+
+    <item
+        android:id="@+id/navigation_applicationhistory"
+        android:title="Application History"/>
 
     <item
         android:id="@+id/navigation_savedjob"
