--- a/app/src/main/res/layout/fragment_applicant.xml
+++ b/app/src/main/res/layout/fragment_applicant.xml
@@ -96,6 +96,60 @@
             android:textSize="15sp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        >
+
+        <TextView
+            android:id="@+id/txt_terms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="By Clicking “Register” Button, You agree with our"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="14dp"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/txtview_privacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Privacy Policy"
+            android:layout_below="@+id/txt_terms"
+            android:textColor="@color/design_default_color_primary"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            />
+
+        <TextView
+            android:id="@+id/txt_and"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" and "
+            android:textColor="@color/black"
+            android:layout_toRightOf="@+id/txtview_privacy"
+            android:layout_below="@+id/txt_terms"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            />
+
+        <TextView
+            android:id="@+id/txtview_termsandconditions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Terms and Conditions"
+            android:textColor="@color/design_default_color_primary"
+            android:layout_toRightOf="@+id/txt_and"
+            android:layout_below="@+id/txt_terms"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            />
+
+
+    </RelativeLayout>
 <!--    <EditText-->
 <!--        android:id="@+id/edittext_name"-->
 <!--        android:layout_width="300dp"-->
