--- a/app/src/main/res/layout/activity_terms_and_privacy.xml
+++ b/app/src/main/res/layout/activity_terms_and_privacy.xml
@@ -13,6 +13,7 @@
         android:id="@+id/tab_layout"
         app:tabTextColor="@android:color/white"
         app:tabIndicatorColor="@android:color/white"
+        app:tabIndicatorHeight="0dp"
         app:tabSelectedTextColor="@android:color/white"
         android:background="@color/design_default_color_primary">
 
