Bug fixed in recommended job and fixed design in applicant profile

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -207,7 +207,7 @@
             android:layout_marginBottom="20dp"
             android:layout_marginTop="10dp"
             android:gravity="left"
-            android:layout_marginLeft="-100dp"/>
+            android:layout_marginLeft="-115dp"/>
         <TextView
             android:id="@+id/textView_addeducation"
             android:textColor="@color/design_default_color_primary"
@@ -229,6 +229,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginTop="10dp"
+            android:nestedScrollingEnabled="false"
             android:id="@+id/recyclerview_educationalbackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -339,4 +340,4 @@
 
 
 </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
