--- a/app/src/main/res/layout/activity_view_accept_reject_applicant.xml
+++ b/app/src/main/res/layout/activity_view_accept_reject_applicant.xml
@@ -114,6 +114,7 @@
             android:textSize="25sp"
             android:text="Work Experience"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="-10dp"
             android:gravity="left"
             android:layout_marginLeft="-80dp"/>
 
@@ -152,7 +153,7 @@
             android:text="Education"
             android:layout_marginTop="10dp"
             android:gravity="left"
-            android:layout_marginLeft="-105dp"/>
+            android:layout_marginLeft="-115dp"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
