--- a/app/src/main/res/layout/activity_view_apply_profile.xml
+++ b/app/src/main/res/layout/activity_view_apply_profile.xml
@@ -112,6 +112,7 @@
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 android:text="Work Experience"
+                android:layout_marginBottom="-10dp"
                 android:layout_marginTop="10dp"
                 android:gravity="left"
                 android:layout_marginLeft="-80dp"/>
@@ -151,7 +152,7 @@
                 android:text="Education"
                 android:layout_marginTop="10dp"
                 android:gravity="left"
-                android:layout_marginLeft="-105dp"/>
+                android:layout_marginLeft="-115dp"/>
 
 
             <androidx.recyclerview.widget.RecyclerView
