--- a/app/src/main/res/layout/activity_view_recommended_applicant_profile.xml
+++ b/app/src/main/res/layout/activity_view_recommended_applicant_profile.xml
@@ -121,6 +121,7 @@
             android:textSize="25sp"
             android:text="Work Experience"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="-10dp"
             android:gravity="left"
             android:layout_marginLeft="-80dp"/>
 
@@ -149,7 +150,7 @@
             android:text="Education"
             android:layout_marginTop="10dp"
             android:gravity="left"
-            android:layout_marginLeft="-105dp"/>
+            android:layout_marginLeft="-115dp"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
