--- a/app/src/main/res/layout/activity_applicant_history.xml
+++ b/app/src/main/res/layout/activity_applicant_history.xml
@@ -30,15 +30,25 @@
 
 
         <RelativeLayout
+            android:id="@+id/searchlayout"
+            android:animateLayoutChanges="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="51dp"
             android:orientation="vertical">
 
             <EditText
                 android:id="@+id/search"
                 android:hint="Search Here"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content" />
+
+            <ImageView
+                android:layout_margin="5dp"
+                android:id="@+id/filterbutton"
+                android:layout_toRightOf="@+id/search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_filter_list_24"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
