--- a/app/src/main/res/layout/activity_edit_employer.xml
+++ b/app/src/main/res/layout/activity_edit_employer.xml
@@ -16,8 +16,8 @@
     android:gravity="center_horizontal"
     tools:context=".employer.EditEmployerProfileActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="100dp"
+    <ImageView
+        android:layout_width="200dp"
         android:layout_height="100dp"
         android:src="@drawable/shape"
         android:layout_gravity="center_horizontal"
