--- a/app/src/main/res/layout/activity_request_maintenance.xml
+++ b/app/src/main/res/layout/activity_request_maintenance.xml
@@ -78,7 +78,7 @@
         android:id="@+id/navigation_view2"
         app:menu="@menu/navigation_drawer_menu_employer"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/drawer_header"
+        app:headerLayout="@layout/drawer_header2"
         app:itemTextAppearance="?android:attr/textAppearanceMedium"
         android:layout_gravity="start"/>
 
