--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -2,20 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:icon="@drawable/ic_baseline_home_24"
         android:id="@+id/navigation_home"
         android:title="Home"/>
     <item
+        android:icon="@drawable/ic_baseline_settings_24"
     android:id="@+id/navigation_testemail"
     android:title="Email"/>
 
     <item
+        android:icon="@drawable/ic_baseline_person_24"
         android:id="@+id/navigation_applicationhistory"
         android:title="Application History"/>
 
     <item
+        android:icon="@drawable/ic_baseline_save_24"
         android:id="@+id/navigation_savedjob"
         android:title="Saved Job"/>
     <item
+        android:icon="@drawable/ic_baseline_exit_to_app_24"
         android:id="@+id/navigation_logout"
         android:title="Logout"/>
 <!--    android:icon="@drawable/ic_baseline_person_24"/>-->
