--- a/app/src/main/res/menu/navigation_drawer_menu_employer.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu_employer.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:icon="@drawable/ic_baseline_home_24"
         android:id="@+id/navigation_home_employer"
         android:title="Home"/>
     <item
+        android:icon="@drawable/ic_baseline_person_24"
         android:id="@+id/navigation_applicanthired"
         android:title="Applicant Hired List"/>
     <item
+        android:icon="@drawable/ic_baseline_settings_24"
         android:id="@+id/navigation_requestmaintenance"
         android:title="Request Maintenance"/>
 <!--    android:icon="@drawable/ic_baseline_person_24"/>-->
     <item
+        android:icon="@drawable/ic_baseline_exit_to_app_24"
         android:id="@+id/navigation_logout"
         android:title="Logout"/>
 </menu>
