Bug fixed in design of logo and drawer navigation

--- a/app/src/main/res/layout/activity_request_maintenance.xml
+++ b/app/src/main/res/layout/activity_request_maintenance.xml
@@ -79,6 +79,9 @@
         app:menu="@menu/navigation_drawer_menu_employer"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/drawer_header2"
+        app:itemIconPadding="30dp"
+        app:itemHorizontalPadding="10dp"
+        app:itemIconTint="@color/design_default_color_primary"
         app:itemTextAppearance="?android:attr/textAppearanceMedium"
         android:layout_gravity="start"/>
 
