--- a/app/src/main/res/layout/activity_applicant_history_view_job.xml
+++ b/app/src/main/res/layout/activity_applicant_history_view_job.xml
@@ -26,9 +26,9 @@
             android:background="#FFFFFF"
             android:gravity="center_horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:layout_marginTop="20dp"
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:src="@color/design_default_color_primary_dark"
                 android:layout_gravity="center_horizontal"
