--- a/app/src/main/res/layout/activity_applicant_hired.xml
+++ b/app/src/main/res/layout/activity_applicant_hired.xml
@@ -42,7 +42,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_appliedjobs"
                 android:layout_width="match_parent"
-                android:layout_height="600dp" />
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
