--- a/app/src/main/res/layout/activity_applicant_saved_job.xml
+++ b/app/src/main/res/layout/activity_applicant_saved_job.xml
@@ -108,7 +108,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview_savedjobs"
                     android:layout_width="match_parent"
-                    android:layout_height="530dp" />
+                    android:layout_height="match_parent" />
             </LinearLayout>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
