--- a/app/src/main/res/layout/activity_view_apply_profile.xml
+++ b/app/src/main/res/layout/activity_view_apply_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.amar.library.ui.StickyScrollView
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -129,6 +129,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_marginTop="10dp"
+                android:nestedScrollingEnabled="false"
                 android:id="@+id/recyclerview_workexperience"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -233,4 +234,4 @@
 <!--        </RelativeLayout>-->
 
     </LinearLayout>
-</com.amar.library.ui.StickyScrollView>
+</androidx.core.widget.NestedScrollView>
