--- a/app/src/main/res/layout/fragment_guest_search.xml
+++ b/app/src/main/res/layout/fragment_guest_search.xml
@@ -78,11 +78,23 @@
             <!--                android:layout_width="wrap_content"-->
             <!--                android:layout_height="wrap_content"-->
             <!--                android:id="@+id/spinner_location"/>-->
+
+            <TextView
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:layout_marginLeft="10dp"
+                android:textAlignment="center"
+                android:textColor="@color/design_default_color_primary"
+                android:text="Salary/Minimum"
+                android:textSize="18sp"
+                android:id="@+id/tv_searchsalaryminimum"/>
             <TextView
                 android:layout_marginLeft="160dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="90dp"
+                android:layout_marginTop="100dp"
                 android:textAlignment="center"
                 android:textColor="@color/design_default_color_primary"
                 android:text="Filter"
