--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -97,7 +97,7 @@
         android:textColor="@color/black"
         android:layout_gravity="left"
         android:layout_marginLeft="8dp"
-        android:text="Gender"
+        android:text="Sex"
         android:textSize="18dp"/>
 <!--    <Spinner-->
 <!--        android:layout_gravity="left"-->
@@ -112,7 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
-        android:hint="Gender"
+        android:hint="Sex"
         android:focusable="true"
         android:focusableInTouchMode="true"
         />
