--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="30dp"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo3"/>
 
 <!--    <TextView-->
 <!--        android:layout_width="wrap_content"-->
